radix-transactions/tests/assets/manifest_generator_error_invalid_decimal_1.diag
error: invalid decimal '1.000000000000000011111111' - MoreThanEighteenDecimalPlaces
   |
 8 |     Address("resource_sim1tknxxxxxxxxxradxrdxxxxxxxxx009923554798xxxxxxxxxakj8n3")
 9 |     Bucket("some_xrd");
10 | 
11 | CREATE_PROOF_FROM_BUCKET_OF_AMOUNT
12 |   Bucket("some_xrd")
13 |   Decimal("1.000000000000000011111111")
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid decimal
14 |   Proof("proof1a");
   |